[tool.poetry]
name = "flask-sum-api"
version = "0.1.0"
description = "A Flask API for managing sums."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^2.3.3"
flask_sqlalchemy = "^2.5.1"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
