[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sum-api"
version = "1.0.0"
description = "A Flask API for calculating sums"
requires-python = ">=3.8"
dependencies = [
    "flask>=2.3.3",
    "requests>=2.31.0",
    "pytest>=7.4.0",
    "flask-sqlalchemy",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]
exclude = [".git", "__pycache__", "build", "dist"]
